compiles src package to classes